--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  intl: ^0.17.0
   path_provider: ^2.0.1
   webview_flutter: ^2.0.2
   cached_network_image: ^3.0.0
